--- a/app/src/main/res/layout/fragment_prelogin.xml
+++ b/app/src/main/res/layout/fragment_prelogin.xml
@@ -4,25 +4,23 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
-             tools:background="@color/fifty_black">
+             tools:background="@color/colorPrimary">
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:layout_marginTop="80dp"
+                  android:gravity="center"
+                  android:layout_gravity="center"
                   android:orientation="vertical">
 
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
-                  android:text="WELCOME TO"
-                  android:textColor="#FFFFFF"
-                  android:textSize="18sp"/>
-
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/tapt"/>
+                  android:text="@string/app_name"
+                  android:textAllCaps="true"
+                  android:textColor="@color/secondaryColor"
+                  android:textSize="64sp"
+                  android:textStyle="bold"
+        />
 
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
@@ -30,7 +28,7 @@
                   android:layout_marginLeft="@dimen/title_margin"
                   android:layout_marginRight="@dimen/title_margin"
                   android:gravity="center"
-                  android:text="Find out what is happenning on your college campus!"
+                  android:text="You are about to enter an exclusive campus feed"
                   android:textColor="#FFFFFF"
                   android:textSize="18sp"/>
 
@@ -45,6 +43,7 @@
                 android:layout_width="0px"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:alpha="0.75"
                 android:background="@color/facebook_blue"
                 android:foreground="?android:selectableItemBackground"
                 android:text="Facebook"
@@ -56,9 +55,10 @@
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:alpha="0.75"
             android:background="@color/secondaryColor"
             android:foreground="?android:selectableItemBackground"
-            android:text="signin"
+            android:text="sign in"
             android:textColor="@color/pure_white"
         />
 
