--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -33,9 +33,9 @@
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
-               android:foreground="?selectableItemBackgroundBorderless"
+               android:background="?selectableItemBackgroundBorderless"
                android:padding="12dp"
-               android:src="@drawable/ic_action_action_done"
+               android:src="@drawable/ic_action_navigation_close"
     />
 
 </FrameLayout>
