--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,7 +45,7 @@
     <color name="user_comment_color">#56bb1d</color>
     <color name="snackbar_background_color">#323232</color>
     <color name="notification_color">#CC2786BB</color>
-    <color name="facebook_blue">#8A9BC3</color>
+    <color name="facebook_blue">#385b88</color>
     <color name="yellow_color">#FBB72E</color>
     <color name="green_color">#239F85</color>
     <color name="blue_color">#84CFDF</color>
