--- a/app/src/main/res/layout/fragment_feed_detail_page.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +12,7 @@
                                        android:layout_height="?android:attr/actionBarSize"
                                        android:background="@color/colorPrimary"
                                        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                                       app:elevation="4dp"/>
+                                       android:elevation="4dp"/>
 
 
     <LinearLayout android:id="@+id/comment_container"
