--- a/app/src/main/res/layout/fragment_find_friends.xml
+++ b/app/src/main/res/layout/fragment_find_friends.xml
@@ -38,8 +38,8 @@
     <LinearLayout android:id="@+id/findFriends_rationale_text"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:layout_marginTop="64dp"
                   android:orientation="vertical"
+                  android:layout_gravity="center"
     >
 
 
@@ -47,10 +47,9 @@
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
-                  android:layout_marginEnd="48dp"
-                  android:drawableTop="@drawable/help23"
+                  android:layout_marginEnd="64dp"
                   android:drawablePadding="16dp"
-                  android:layout_marginStart="48dp"
+                  android:layout_marginStart="64dp"
                   android:layout_marginTop="@dimen/activity_horizontal_margin"
                   android:gravity="center"
                   android:text="@string/need_contant_permission"/>
