--- a/app/src/main/res/layout/fragment_findfriends_choices.xml
+++ b/app/src/main/res/layout/fragment_findfriends_choices.xml
@@ -22,6 +22,7 @@
                       android:background="@null"
                       android:gravity="center_vertical"
                       android:hint="Search"
+                      android:imeOptions="actionSearch"
                       android:inputType="textPersonName"
                       android:textColor="@color/white"
                       android:textCursorDrawable="@drawable/edit_text_cursor"/>
