--- a/app/src/main/res/layout/no_comments_item.xml
+++ b/app/src/main/res/layout/no_comments_item.xml
@@ -6,7 +6,10 @@
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
-              android:layout_margin="32dp"
+              android:layout_marginStart="64dp"
+              android:layout_marginEnd="64dp"
+              android:layout_marginTop="32dp"
+              android:layout_marginBottom="32dp"
               android:textSize="@dimen/header_font_size"
               android:textColor="@color/eighty_black"
               android:gravity="center"
