--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -49,8 +49,7 @@
                 android:id="@+id/text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:alpha="0.6"
-                android:background="@android:color/black"
+                android:background="#96000000"
                 android:gravity="center"
                 android:imeOptions="actionDone"
                 android:inputType="textCapSentences|textNoSuggestions"
