--- a/app/src/main/res/layout/load_more_footer.xml
+++ b/app/src/main/res/layout/load_more_footer.xml
@@ -10,12 +10,13 @@
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
-                 android:layout_marginTop="35dp"/>
+                 android:layout_margin="@dimen/activity_horizontal_margin"/>
 
     <Button android:id="@+id/updatesFragment_reload_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="@dimen/half_margin"
             android:text="Reload"
             android:visibility="gone"/>
 
