--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -57,8 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
-            android:alpha="0.6"
-            android:background="@android:color/black"
+            android:background="#96000000"
             android:gravity="center"
             android:imeOptions="actionDone"
             android:inputType="textCapSentences|textNoSuggestions"
