--- a/app/src/main/res/layout/wrapping_footer_dark.xml
+++ b/app/src/main/res/layout/wrapping_footer_dark.xml
@@ -1,7 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:background="?android:attr/selectableItemBackground">
 
-</LinearLayout>
+    <TextView android:id="@+id/textView"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center"
+              android:layout_marginEnd="64dp"
+              android:layout_marginStart="64dp"
+              android:gravity="center"
+              android:text="ERROR LOADING"
+              android:textColor="@color/pure_black"
+              android:textSize="@dimen/header_font_size"
+    />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+    />
+
+</FrameLayout>
