--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -52,7 +52,7 @@
                 android:background="#96000000"
                 android:gravity="center"
                 android:imeOptions="actionDone"
-                android:inputType="textCapSentences|textNoSuggestions"
+                android:inputType="textCapSentences"
                 android:lines="1"
                 android:paddingBottom="8dp"
                 android:paddingTop="8dp"
