--- a/app/src/main/res/layout/profile_grid_item_no_image.xml
+++ b/app/src/main/res/layout/profile_grid_item_no_image.xml
@@ -3,8 +3,7 @@
 <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    > <!--TODO: diff color? -->
+    android:layout_height="match_parent">
 
     <View android:layout_width="match_parent"
           android:layout_height="match_parent"
