--- a/app/src/main/res/layout/wrapping_footer_dark.xml
+++ b/app/src/main/res/layout/wrapping_footer_dark.xml
@@ -8,11 +8,13 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
+              android:layout_marginTop="16dp"
+              android:layout_marginBottom="16dp"
               android:layout_marginEnd="64dp"
               android:layout_marginStart="64dp"
               android:gravity="center"
               android:text="ERROR LOADING"
-              android:textColor="@color/pure_black"
+              android:textColor="@color/eighty_black"
               android:textSize="@dimen/header_font_size"
     />
 
