--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,11 @@
         <item name="android:windowBackground">@color/white</item>
         <item name="colorAccent">@color/secondaryColor</item>
     </style>
+    
+    
+    <style name="AppTheme.FullScreen" parent="AppTheme">
+        <item name="android:windowFullscreen">true</item>
+    </style>
 
 
     <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
@@ -45,45 +50,6 @@
     <style name="AppTheme.BlackBackground" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:colorBackground">#000000</item>
     </style>
-
-
-    <!--Square Camera-->
-    <!-- Base application theme. -->
-    <!--<style name="squarecamera__CameraFullScreenTheme"-->
-           <!--parent="squarecamera__CameraFullScreenTheme.Base">-->
-
-    <!--</style>-->
-
-    <!--<style name="squarecamera__CameraFullScreenTheme.Base" parent="AppTheme">-->
-        <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-        <!--<item name="android:windowNoTitle">true</item>-->
-        <!--<item name="android:windowActionBar">false</item>-->
-        <!--<item name="android:windowFullscreen">true</item>-->
-        <!--<item name="android:windowContentOverlay">@null</item>-->
-    <!--</style>-->
-
-    <!--<style name="squarecamera__CameraFullScreenTheme.AppBarOverlay"-->
-           <!--parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>-->
-
-    <!--<style name="squarecamera__CameraFullScreenTheme.PopupOverlay"-->
-           <!--parent="ThemeOverlay.AppCompat.Light"/>-->
-
-    <!--<style name="PostDialog" parent="android:Theme.Dialog" >-->
-    <!--<item name="android:windowNoTitle">false</item>-->
-    <!--<item name="android:windowFullscreen">false</item>-->
-    <!--<item name="android:windowIsFloating">false</item>-->
-    <!--</style>-->
-    <!--<style name="NewChatDialog" parent="@android:style/Theme.Dialog">-->
-        <!--<item name="android:windowFrame">@null</item>-->
-        <!--<item name="android:windowBackground">@color/white</item>-->
-        <!--<item name="android:windowIsFloating">false</item>-->
-        <!--<item name="android:windowContentOverlay">@null</item>-->
-        <!--<item name="android:windowTitleStyle">@null</item>-->
-        <!--<item name="android:colorBackgroundCacheHint">@null</item>-->
-        <!--<item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>-->
-        <!--<item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>-->
-        <!--<item name="android:gravity">center</item>-->
-    <!--</style>-->
 
     <style name="MSV_ImageButton">
         <item name="android:layout_width">wrap_content</item>
