--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -1,62 +1,26 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/colorPrimary"
-              android:focusableInTouchMode="true"
-              android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:focusableInTouchMode="true">
 
-    <FrameLayout android:layout_width="match_parent"
-                 android:layout_height="?android:attr/actionBarSize">
-
-        <android.support.v7.widget.Toolbar android:id="@+id/edit_photo_toolbar"
-                                           android:layout_width="match_parent"
-                                           android:layout_height="?android:attr/actionBarSize"
-                                           android:background="@color/colorPrimary"
-                                           android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
-
-        <FrameLayout android:layout_width="wrap_content"
-                     android:layout_height="match_parent"
-                     android:layout_gravity="center_vertical|end"
-                     android:layout_marginEnd="16dp">
-
-            <ImageButton
-                android:id="@+id/save_photo"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:foreground="?selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_action_check83"/>
-
-            <ProgressBar
-                android:id="@+id/editFragment_progress_bar"
-                style="?android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="gone"
-            />
-
-        </FrameLayout>
-    </FrameLayout>
 
     <FrameLayout android:id="@+id/frame"
                  android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:background="@android:color/white"
+                 android:layout_height="match_parent"
                  android:focusableInTouchMode="true">
 
-        <com.linute.linute.SquareCamera.SquareImageView
+        <ImageView
             android:id="@+id/photo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"/>
-
+            android:layout_height="match_parent"
+            android:background="@color/pure_black"
+            android:scaleType="fitCenter"/>
 
         <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
             android:id="@+id/editFragment_title_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="160dp"
             android:background="#96000000"
             android:gravity="center"
             android:imeOptions="actionDone"
@@ -68,63 +32,91 @@
             android:textSize="14sp"
             android:visibility="gone"
         />
+    </FrameLayout>
 
+    <FrameLayout android:id="@+id/top"
+                 android:layout_width="match_parent"
+                 android:layout_height="?android:attr/actionBarSize">
+
+        <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="16dp">
+
+            <ImageButton
+                android:id="@+id/save_photo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:foreground="?selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_action_check83"/>
+
+            <ProgressBar
+                android:id="@+id/editFragment_progress_bar"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
+        </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
     </FrameLayout>
 
     <FrameLayout android:id="@+id/bottom"
                  android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 android:background="@color/colorPrimary"
-                 android:gravity="center">
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="bottom">
 
 
-        <RelativeLayout android:id="@+id/comments"
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent">
-
-
-            <CheckBox android:id="@+id/anon_comments"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_centerInParent="true"
-                      android:button="@drawable/turn_anon_comments_off"
-                      android:checked="true"
-            />
+        <LinearLayout android:id="@+id/comments"
+                      android:layout_width="120dp"
+                      android:layout_height="match_parent"
+                      android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                      android:orientation="vertical">
 
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_above="@id/anon_comments"
-                      android:layout_centerHorizontal="true"
+                      android:layout_gravity="center_horizontal"
                       android:gravity="center"
                       android:text="anon\ncomments"
                       android:textColor="@color/pure_white"
                       android:textSize="12sp"
             />
 
-        </RelativeLayout>
-
-        <RelativeLayout android:id="@+id/anon"
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="end"
-        >
-            <CheckBox android:id="@+id/editFragment_switch"
+            <CheckBox android:id="@+id/anon_comments"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_centerInParent="true"
-                      android:button="@drawable/post_as_anon_checkbox"
+                      android:layout_gravity="center_horizontal"
+                      android:button="@drawable/turn_anon_comments_off"
+                      android:checked="true"
             />
+
+        </LinearLayout>
+
+        <LinearLayout android:id="@+id/anon"
+                      android:layout_width="120dp"
+                      android:layout_height="match_parent"
+                      android:layout_gravity="end"
+                      android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                      android:orientation="vertical">
 
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_above="@id/editFragment_switch"
-                      android:layout_centerHorizontal="true"
+                      android:layout_gravity="center_horizontal"
                       android:gravity="center"
                       android:text="post\nas"
                       android:textColor="@color/pure_white"
                       android:textSize="12sp"
             />
-        </RelativeLayout>
+
+            <CheckBox android:id="@+id/editFragment_switch"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="center_horizontal"
+                      android:button="@drawable/post_as_anon_checkbox"
+            />
+        </LinearLayout>
     </FrameLayout>
 
-</LinearLayout>
+</FrameLayout>
