--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="activity_horizontal_margin">64dp</dimen>
 
     <dimen name="half_margin">16dp</dimen>
+    <dimen name="double_margin">128dp</dimen>
 
     <dimen name="title_margin">128dp</dimen>
 
