--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
 
 
     <dimen name="half_margin">8dp</dimen>
+    <dimen name="double_margin">32dp</dimen>
 
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
